--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.url=jdbc:mysql://localhost:3306/mission
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=password
 spring.jpa.generate-ddl=true
 
 # App Properties
 kyle.app.jwtSecret=jwtkyleSecretKey
 kyle.app.jwtExpiration=86400
+
+#server.port = 4000
