--- a/pom.xml
+++ b/pom.xml
@@ -79,12 +79,22 @@
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
-			<version>2.6.1</version>
+			<version>2.7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.6.1</version>
+			<version>2.7.0</version>
+		</dependency>
+
+		<!-- QueryDSL Library -->
+		<dependency>
+			<groupId>com.querydsl</groupId>
+			<artifactId>querydsl-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.querydsl</groupId>
+			<artifactId>querydsl-apt</artifactId>
 		</dependency>
 
 	</dependencies>
@@ -94,6 +104,23 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<!-- QueryDSL Plugin -->
+			<plugin>
+				<groupId>com.mysema.maven</groupId>
+				<artifactId>apt-maven-plugin</artifactId>
+				<version>1.1.3</version>
+				<executions>
+						<execution>
+								<goals>
+										<goal>process</goal>
+								</goals>
+								<configuration>
+										<outputDirectory>target/generated-sources/java</outputDirectory>
+										<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+								</configuration>
+						</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
