--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/mission
 spring.datasource.username=root
 spring.datasource.password=password
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 
 # App Properties
-kyle.app.jwtSecret=jwtkyleSecretKey
-kyle.app.jwtExpiration=86400
+main.app.jwtSecret=jwtkyleSecretKey
+main.app.jwtExpiration=86400
 
 #server.port = 4000
 
